# alignator

./: .gitignore  README.md  pyproject.toml
alignator/: align_images.py  main.py
alignator/lib/alignator/: __init__.py  image.py  runner.py
alignator/lib/manipulators/: __init__.py  align.py  brightandcontrast.py  histogram.py  manipulator.py  resize.py  video.py  vignette.py
alignator/lib/utils/: __init__.py  config.py  log.py  utils.py
tests/: test_alignator.py
